--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for RFFishingReWork
 
+1.4.1 - Added compatibility with [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2542432157]Erin's Japanese Cuisine[/url]
+
+
 1.4.0 - First publish.
 Used DeepL to update translations for ChineseSimplified, French, German, Japanese, Russian
 
