Mod updated for 1.5 and passed autotests

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for RFFishingReWork
 
+1.5.0 - Mod updated for 1.5 and passed autotests
+
+
 1.4.2 - Fishing should now not be done by guests that cannot do any work
 
 
